auf Aktueller Stand gebracht, Feller im index.js korrigiert.

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,13 +1,11 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <%- include('partials/head') %>
 <body>
     <%- include('partials/header') %>
 
-    <h2>Willkommen auf der Startseite</h2>
-    <p><%= message %></p>
+    <h2>Kontakt</h2>
 
-    
     <%- include('partials/footer') %>
 </body>
 </html>
