--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,13 +1,13 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <%- include('partials/head') %>
 <body>
     <%- include('partials/header') %>
 
-    <h2>Willkommen auf der Startseite</h2>
-    <p><%= message %></p>
+    <h2>Über uns</h2>
 
-    
+    <img src="/images/meme.jpg" />
+
     <%- include('partials/footer') %>
 </body>
 </html>
