--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
         <a href="/about">Über uns</a>
         <a href="/contact">Kontakt</a>
         <a href="/register">Regestrierung</a>
+        <a href="/login">Login</a>
     </nav>
 </header>
 <hr>
