--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,24 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    padding: 20px;
+    background-color: white;
+}
+h2{
+    color: black;
+}
+/*Erfolg und Fellermeldungen*/
+.alert{
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+/*Feller*/
+.alert-danger{
+    color : white;
+    background-color: red;
+}
+.alert-success{
+    color: white;
+    background-color: green;
 }
