--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<div class="container">
 <header>
     <h1>Meine Website</h1>
     <nav>
@@ -6,6 +7,10 @@
         <a href="/contact">Kontakt</a>
         <a href="/register">Regestrierung</a>
         <a href="/login">Login</a>
+        <% if (locals.user) { %>
+            <a href="/dashboard">Dashboard</a>
+        <% } %>
     </nav>
 </header>
 <hr>
+<%- include('alerts') %>
