--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,33 +3,25 @@
 <%- include('partials/head') %>
 <body>
     <%- include('partials/header') %>
-    <h2>Registrierung</h2>
 
-    <!--Feller/erfolg anzeigen-->
-    <% if (error) {%>
-        <div class = "alert alert-danger"><%= error %></div>
-        <%} %>
-    <% if (success) { %>
-            <div class="alert alert-success"><%= success %></div>
-    <% } %>
+    <h2>Registrierung</h2>
 
     <form action="/register" method="POST">
         <label for="username">Benutzername:</label>
-        <input type="text" id="username" name="username" required><br><br>
+        <input type="text" id="username" name="username" value="<%= locals.username ? username : '' %>" required><br><br>
 
         <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
+        <input type="text" id="name" name="name" value="<%= locals.name ? name : '' %>" required><br><br>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+        <input type="email" id="email" name="email" value="<%= locals.email ? email : '' %>" required><br><br>
 
         <label for="password">Passwort:</label>
         <input type="password" id="password" name="password" required><br><br>
 
-         <!-- Neues Feld für Passwort bestätigen -->
-         <label for="confirmPassword">Passwort bestätigen:</label>
-         <input type="password" id="confirmPassword" name="confirmPassword" required><br><br>
-         
+        <label for="password">Passwortbestätigung:</label>
+        <input type="password" id="password_check" name="password_check" required><br><br>
+
         <button type="submit">Registrieren</button>
     </form>
     <%- include('partials/footer') %>
